data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_475.wast
;; 6. **Test Description**: Develop a loop that alternates between `br` and `br_if` instructions, using nested blocks within the loop. The `br_if` should test various conditions leading to a potential exit from the blocks and ultimately the loop.    **Constraint**: Validates the correct interpretation of block input/output types concerning backward branches.    **Relation to Infinite Loops**: Misinterpreting block types can cause `br_if` conditions to fail, resulting in loops running indefinitely.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (block (result i32)
          (drop (br_if 1 (i32.const 0) (i32.const 42))) ;; this br_if may or may not break the loop
          (br 0) ;; unconditional backward branch to loop start
        )
        (i32.const 0) ;; if we exit the block, return 0
      )
    )
  )
  "type mismatch"
)